--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,11 @@
 {
-  "name": "Мой Сайт",
-  "short_name": "Сайт",
-  "start_url": "/index.html",
+  "name": "NaturaSnt",
+  "short_name": "NaturaSnt",
+  "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#000000",
   "theme_color": "#000000",
+  "description": "Гомеопатические препараты из Индии",
   "icons": [
     {
       "src": "images/icon-192.png",
